# SOS

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
apps/: Cargo.toml
apps/src/: lib.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: lib.rs
entry_point/: Cargo.toml
entry_point/src/: main.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  graphics.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  panic.rs  qemu.rs  serial.rs  task.rs  threads.rs  time.rs
kernel/src/allocator/: FixedSize.rs
kernel/src/interrupts/: apic.rs  pic.rs
kernel/src/task/: executor.rs  keyboard.rs  simple_executor.rs
kernel/src/threads/: ap_entrypoint.rs  trampoline.rs  trampoline.s
os/: Cargo.toml
os/src/: graphics.rs  lib.rs
os/src/graphics/: text.rs
src/: main.rs
terminal/: Cargo.toml
terminal/src/: commands.rs  lib.rs
