[package]
name = "kernel"
version = "0.1.0"
edition = "2024"


[dependencies]
bootloader_api = "0.11"

x86_64 = {version= "0.15.2", features= ["abi_x86_interrupt"]}
noto-sans-mono-bitmap = "0.3"
log = "0.4.17"
conquer-once = { version = "0.3.2", default-features = false }
spinning_top = "0.2.4"
volatile = "0.2.6"
lazy_static = {version = "1.0", features = ["spin_no_std"]}
spin = "0.5.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
