[package]
name = "kernel"
version = "0.1.0"
edition = "2024"


[dependencies]
bootloader_api = "0.11.10"

x86_64 = {version= "0.15.2", features= ["abi_x86_interrupt"]}
noto-sans-mono-bitmap = "0.3.1"
log = "0.4.27"
conquer-once = { version = "0.4.0", default-features = false }
spinning_top = "0.3.0"
volatile = "0.6.1"
lazy_static = {version = "1.5", features = ["spin_no_std"]}
spin = "0.10.0"
uart_16550 = "0.3.2"
pic8259 = "0.11"
pc-keyboard = "0.8.0"
crossbeam-queue = {version= "0.3.11",default-features= false,features= ["alloc"]}
futures-util = {version = "0.3.4",default-features = false,features = ["alloc"]}
futures = { version = "0.3", default-features = false, features = ["alloc"] }
